rename scala examples
git-svn-id: http://camelinaction.googlecode.com/svn/trunk@261 2ef4527c-bcc6-11de-8784-f7ad4773dbab

--- a/.gitignore
+++ b/.gitignore
@@ -96,22 +96,22 @@ chapter11/order-router/.project
 chapter11/order-router/.settings
 chapter11/order-router/eclipse-classes
 chapter11/order-router/target
-chapter11/scala-order-router-javacontext/*.i??
-chapter11/scala-order-router-javacontext/.checkstyle
-chapter11/scala-order-router-javacontext/.classpath
-chapter11/scala-order-router-javacontext/.pmd
-chapter11/scala-order-router-javacontext/.project
-chapter11/scala-order-router-javacontext/.settings
-chapter11/scala-order-router-javacontext/eclipse-classes
-chapter11/scala-order-router-javacontext/target
-chapter11/scala-order-router/*.i??
-chapter11/scala-order-router/.checkstyle
-chapter11/scala-order-router/.classpath
-chapter11/scala-order-router/.pmd
-chapter11/scala-order-router/.project
-chapter11/scala-order-router/.settings
-chapter11/scala-order-router/eclipse-classes
-chapter11/scala-order-router/target
+chapter11/scala-router-javacontext/*.i??
+chapter11/scala-router-javacontext/.checkstyle
+chapter11/scala-router-javacontext/.classpath
+chapter11/scala-router-javacontext/.pmd
+chapter11/scala-router-javacontext/.project
+chapter11/scala-router-javacontext/.settings
+chapter11/scala-router-javacontext/eclipse-classes
+chapter11/scala-router-javacontext/target
+chapter11/scala-router/*.i??
+chapter11/scala-router/.checkstyle
+chapter11/scala-router/.classpath
+chapter11/scala-router/.pmd
+chapter11/scala-router/.project
+chapter11/scala-router/.settings
+chapter11/scala-router/eclipse-classes
+chapter11/scala-router/target
 chapter12/custom/*.i??
 chapter12/custom/.checkstyle
 chapter12/custom/.classpath
