exteded ignore list
git-svn-id: http://camelinaction.googlecode.com/svn/trunk@267 2ef4527c-bcc6-11de-8784-f7ad4773dbab

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,10 @@
 /.pmd
 /.project
 /.settings
-appendixE/appendixE.iml
-appendixE/appendixE.ipr
-appendixE/appendixE.iws
+appendixE/*.iml
+appendixE/*.ipr
+appendixE/*.iws
+appendixE/.idea
 appendixE/lib_managed
 appendixE/logs
 appendixE/project/boot
