--- a/.gitattributes
+++ b/.gitattributes
@@ -304,4 +304,5 @@ chapter9/uow/src/test/resources/log4j.properties svneol=native#text/plain
 chapter9/xa/pom.xml svneol=native#text/xml
 chapter9/xa/src/test/resources/log4j.properties svneol=native#text/plain
 chapter9/xa/src/test/resources/spring-context.xml svneol=native#text/xml
+misc/gen-catalog/generate -text
 /pom.xml -text
