Added svn:ignore property on camelinaction modules
git-svn-id: http://camelinaction.googlecode.com/svn/trunk@317 2ef4527c-bcc6-11de-8784-f7ad4773dbab

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,24 @@
 /.pmd
 /.project
 /.settings
+appendixC/consumer/*.i??
+appendixC/consumer/.checkstyle
+appendixC/consumer/.classpath
+appendixC/consumer/.pmd
+appendixC/consumer/.project
+appendixC/consumer/.settings
+appendixC/consumer/classes
+appendixC/consumer/eclipse-classes
+appendixC/consumer/target
+appendixC/producer/*.i??
+appendixC/producer/.checkstyle
+appendixC/producer/.classpath
+appendixC/producer/.pmd
+appendixC/producer/.project
+appendixC/producer/.settings
+appendixC/producer/classes
+appendixC/producer/eclipse-classes
+appendixC/producer/target
 appendixE/*.iml
 appendixE/*.ipr
 appendixE/*.iws
@@ -491,6 +509,15 @@ chapter8/aggregator/.project
 chapter8/aggregator/.settings
 chapter8/aggregator/eclipse-classes
 chapter8/aggregator/target
+chapter8/dynamicrouter/*.i??
+chapter8/dynamicrouter/.checkstyle
+chapter8/dynamicrouter/.classpath
+chapter8/dynamicrouter/.pmd
+chapter8/dynamicrouter/.project
+chapter8/dynamicrouter/.settings
+chapter8/dynamicrouter/classes
+chapter8/dynamicrouter/eclipse-classes
+chapter8/dynamicrouter/target
 chapter8/loadbalancer/*.i??
 chapter8/loadbalancer/.checkstyle
 chapter8/loadbalancer/.classpath
